--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""fefe
+    "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
   },
   "devDependencies": {
     "@vitejs/plugin-react": "4.0",
